# gmock_bug_demo

./: .travis.yml  CMakeLists.txt  package.xml
include/gmock_bug_demo/: foo.h
tests/: unittest_simple_gmock.cpp
