<?xml version="1.0"?>
<package format="2">
  <name>gmock_bug_demo</name>
  <version>0.0.0</version>
  <description>The gmock_bug_demo package</description>

  <maintainer email="none@none.de">alex</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <test_depend>rosunit</test_depend>

</package>
